# Snowflakenet_ICP_3Dto2D

./: .cursorignore  .gitattributes  .gitignore  README.md  environment_wandb_online.yml  pyproject.toml  pytest.ini  requirements-train-online.txt  requirements-wandb-legacy-py37.txt
docs/: iterative_refinement_report.md
scripts/: 00_preprocess_itodd.py  00_preprocess_itodd_with_removal.py  00_preprocess_itodd_with_removal_16k_min1024.py  00_preprocess_pcn.py  01_compute_best_view.py  01_preprocess_modelnet40.py  01_preprocessing.py  01_preprocessing_with_removal.py  01_preprocessing_with_removal_16k_min1024.py  02_train_completion.py  03_eval_completion.py  03_train_completion_itodd.py  04_infer_completion.py  04_train_completion_mixed.py  04_viz_completion_processed_compare.py  05_estimate_pose.py  06_complete_and_icp.py  06_viz_lighting_dropout.py  07_render_and_compare.py  07_render_and_compare_vis.py  07_viz_convergence_basin.py  08_itodd_pose_refine_test.py  08_viz_completion_pretrain_vs_finetune.py  09_itodd_pose_refine_validate.py  09_verify_cano_vs_legacy.py  10_debug_completion_sample.py  11_compute_base_poses.py  12_validate_base_poses_vis.py  13_vis_base_pose_pointclouds.py  14_vis_base_pose_full_preprocess.py  analyze_train_log_csv.py  check_alignment.py  hpr_test.py  icp_demo.py  inspect_remaining_points.py  make_pcn_subset.py  preprocess.py  run_pipeline.sh  run_train_py310.sh  simple_infer.py  (+7 more)
src/data/: __init__.py  hpr.py  (+5 more)
tests/: conftest.py  plot_pose_iter_results.py  test_chamfer_rotation_invariance.py  test_metrics_utils.py  test_preprocessing.py
(+23 files in other folders)
